update styles for landing page

--- a/index.html
+++ b/index.html
@@ -35,62 +35,49 @@
 </section>
 
 <!-- CAROUSEL -->
-<div id="carouselNav" class="carousel slide carousel-fade" data-bs-ride="carousel">
+<div class="carousel-wrapper">
 
+<div id="carouselNav" class="carousel slide carousel-fade" data-bs-ride="carousel">
+  
   <div class="carousel-inner">
 
-    <!-- Slide 1 -->
     <div class="carousel-item active">
-      <img src="images/acechianni.jpg" alt="Portrait of Ace Chianni" />
+      <img src="images/acechianni.jpg" class="d-block w-100" alt="Ace portrait">
       <div class="carousel-caption">
         <h5>Who Am I?</h5>
-        <p>
-          I’m Ace Chianni, a multidisciplinary designer blending psychology,
-          art, and technology to craft soulful digital experiences that feel
-          safe, expressive, and intentional.
-        </p>
+        <p>I’m Chantrice “Ace” LaCabe, a multidisciplinary designer blending psychology, art, and technology.</p>
       </div>
     </div>
 
-    <!-- Slide 2 -->
     <div class="carousel-item">
-      <img src="images/novaccert.jpg" alt="Scenic artistry certificate" />
+      <img src="images/novaccert.jpg" class="d-block w-100" alt="NOVAC certificate">
       <div class="carousel-caption">
         <h5>What Do I Do?</h5>
-        <p>
-          I design interfaces, brands, and systems that balance aesthetic
-          beauty with emotional intelligence and functional clarity.
-        </p>
+        <p>UX/UI design focused on emotion-driven, inclusive digital experiences.</p>
       </div>
     </div>
 
-    <!-- Slide 3 -->
     <div class="carousel-item">
-      <img src="images/skills2.jpg" alt="Ace creating art" />
+      <img src="images/skills2.jpg" class="d-block w-100" alt="Ace painting">
       <div class="carousel-caption">
         <h5>Why Do I Do It?</h5>
-        <p>
-          Because creation is healing. My work supports expression,
-          self-discovery, and gentle growth through design.
-        </p>
+        <p>To create tools that make people feel seen, safe, and inspired.</p>
       </div>
     </div>
 
   </div>
 
-  <!-- Controls -->
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselNav" data-bs-slide="prev">
     <span class="carousel-control-prev-icon"></span>
   </button>
+
   <button class="carousel-control-next" type="button" data-bs-target="#carouselNav" data-bs-slide="next">
     <span class="carousel-control-next-icon"></span>
   </button>
 
-  <div class="carousel-controls">
-    <button id="pauseCarousel" class="btn">Pause</button>
-    <button id="playCarousel" class="btn">Play</button>
-  </div>
 </div>
+</div>
+
 
 <!-- STRATEGY SECTION -->
 <section class="homepage-strategy">
