more landing page edits

--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Ace Chianni | UX/UI Designer & Multidisciplinary Creative</title>
+  <title>Ace Chianni | Multidisciplinary Designer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO -->
-  <meta name="description" content="Ace Chianni is a multidisciplinary designer blending UX/UI, art, psychology, and wellness to create emotionally resonant digital experiences."/>
-  <meta name="keywords" content="UX Designer, UI Designer, Portfolio, Creative Technologist, New Orleans Designer"/>
+  <meta name="description"
+    content="Ace Chianni is a multidisciplinary designer blending UX/UI, art, psychology, and wellness into emotionally resonant digital experiences."/>
+  <meta name="keywords"
+    content="UX Designer, UI Designer, Creative Technologist, Wellness Design, Portfolio, Ace Chianni"/>
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
@@ -17,83 +19,115 @@
 
   <!-- Styles -->
   <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" href="css/carousel.css"/>
 </head>
 
 <body>
 
-<!-- NAV -->
+<!-- NAVBAR -->
 <div id="navbar-placeholder"></div>
 
-<!-- HERO -->
-<section class="hero text-center">
-  <h1 class="hero-title">
-    Ace Creates <span>— The Intersection of Art, Wellness & Design</span>
-  </h1>
-  <p class="hero-subtitle">
-    UX/UI Designer • Creative Technologist • Holistic Visionary
-  </p>
-</section>
+<!-- HERO SECTION -->
+<section class="hero">
+  <div class="hero-inner">
 
-<!-- CAROUSEL -->
-<div class="carousel-wrapper">
+    <h1 class="hero-title">
+      Design as Ritual.<br/>
+      Art as Language.<br/>
+      Technology as the Method.
+    </h1>
 
-<div id="carouselNav" class="carousel slide carousel-fade" data-bs-ride="carousel">
-  
-  <div class="carousel-inner">
+    <p class="hero-intro">
+      I’m Ace — a multidisciplinary designer transforming emotion, psychology, and creativity into intentional digital experiences that feel human, immersive, and alive.
+    </p>
 
-    <div class="carousel-item active">
-      <img src="images/acechianni.jpg" class="d-block w-100" alt="Ace portrait">
-      <div class="carousel-caption">
-        <h5>Who Am I?</h5>
-        <p>I’m Chantrice “Ace” LaCabe, a multidisciplinary designer blending psychology, art, and technology.</p>
-      </div>
-    </div>
-
-    <div class="carousel-item">
-      <img src="images/novaccert.jpg" class="d-block w-100" alt="NOVAC certificate">
-      <div class="carousel-caption">
-        <h5>What Do I Do?</h5>
-        <p>UX/UI design focused on emotion-driven, inclusive digital experiences.</p>
-      </div>
-    </div>
-
-    <div class="carousel-item">
-      <img src="images/skills2.jpg" class="d-block w-100" alt="Ace painting">
-      <div class="carousel-caption">
-        <h5>Why Do I Do It?</h5>
-        <p>To create tools that make people feel seen, safe, and inspired.</p>
-      </div>
-    </div>
+    <a href="content.html" class="hero-cta">
+      Explore My Work
+    </a>
 
   </div>
+</section>
 
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselNav" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon"></span>
-  </button>
+<!-- VISUAL STORY CAROUSEL -->
+<section class="carousel-section">
+  <div class="carousel-wrapper">
 
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselNav" data-bs-slide="next">
-    <span class="carousel-control-next-icon"></span>
-  </button>
+    <div id="carouselNav" class="carousel slide carousel-fade" data-bs-ride="carousel">
 
-</div>
-</div>
+      <div class="carousel-inner">
 
+        <div class="carousel-item active">
+          <img src="images/acechianni.jpg" class="d-block w-100" alt="Ace portrait">
+          <div class="carousel-caption">
+            <h5>Who I Am</h5>
+            <p>
+              A creative shaped by psychology, softness, curiosity, and rebellion.
+              I build interfaces that carry emotion, meaning, and breath.
+            </p>
+          </div>
+        </div>
 
-<!-- STRATEGY SECTION -->
+        <div class="carousel-item">
+          <img src="images/novaccert.jpg" class="d-block w-100" alt="NOVAC certification">
+          <div class="carousel-caption">
+            <h5>What I Build</h5>
+            <p>
+              Thoughtful digital spaces where functionality meets feeling —
+              rooted in accessibility, storytelling, and presence.
+            </p>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="images/skills2.jpg" class="d-block w-100" alt="Ace creating art">
+          <div class="carousel-caption">
+            <h5>Why Design Matters</h5>
+            <p>
+              Because technology should soothe, empower, and reflect the fullness of human experience.
+            </p>
+          </div>
+        </div>
+
+      </div>
+
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselNav" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselNav" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </button>
+
+    </div>
+  </div>
+</section>
+
+<!-- POSITIONING + AUTHORITY SECTION -->
 <section class="homepage-strategy">
-  <h2>Design With Intention</h2>
-  <p>
-    My portfolio is a living archive of growth, storytelling, and
-    transformation. I create experiences that honor sensitivity,
-    clarity, and authenticity — specializing in:
+
+  <h2>Rooted in Intention</h2>
+
+  <p class="strategy-text">
+    My work exists at the intersection of design, emotion, and human-centered thinking.
+    Though my path is unconventional, it is deeply intentional — shaped by lived experience,
+    artistic training, and an intuitive understanding of how people feel inside digital spaces.
   </p>
 
-  <ul>
-    <li>UX/UI for emotionally-aware platforms</li>
-    <li>Neurodivergent-friendly interfaces</li>
-    <li>Creative brand systems</li>
-    <li>Digital wellness spaces</li>
+  <ul class="strategy-list">
+    <li>Emotion-led UX & Interface design</li>
+    <li>Neurodivergent-accessible experiences</li>
+    <li>Story-rich visual systems</li>
+    <li>Psychology-informed interaction design</li>
   </ul>
+
+  <p class="strategy-text" style="margin-top: 1rem;">
+    I don’t just design layouts — I create environments where users feel seen, regulated, and inspired.
+  </p>
+
+  <a href="about.html" class="secondary-cta">
+    Learn My Story
+  </a>
+
 </section>
 
 <!-- FOOTER -->
