about me page edits

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="css/colors.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/timeline.css" />
-    <link rel="stylesheet" hred="css/skills.css" />
+    <link rel="stylesheet" href="css/skills.css" />
   </head>
 
   <body>
@@ -31,13 +31,38 @@
 
     <!-- PAGE HEADER -->
     <header class="text-center mt-4">
-      <h1>My Story</h1>
-      <p class="lead text-muted">
-        A quick journey of my growth, resilience, and rediscovery.
-      </p>
-    </header>
+  <h1>My Story</h1>
+  <p class="lead text-muted">
+    A creative evolution shaped by psychology, art, and intentional rediscovery.
+  </p>
+</header>
+
 
     <main class="d-flex flex-wrap justify-content-center gap-5 p-4">
+
+      <section class="about-intro">
+  <h2>More Than a Designer — A Translator of Feeling</h2>
+
+  <p class="about-paragraph">
+    I did not arrive here from a linear path and that is my power.
+    My path winds through psychology, film, holistic wellness, and visual art, all converging into a design practice rooted in emotional intelligence and intentionality.
+  </p>
+
+  <p class="about-paragraph">
+    I create intentional digital experiences for people who feel deeply, think expansively, and move through the world with nuance. 
+    My work blends softness with structure. I live for merging intuitive artistry and technical strategy to design interfaces that feel human, embodied, and alive.
+  </p>
+
+  <p class="about-paragraph">
+    I am not interested in design that only looks beautiful. I build experiences that communicate, regulate, and restore.
+  </p>
+
+  <p class="about-paragraph signature">
+    My story is unconventional. My perspective is intentional.  
+    And my work lives at the intersection of soul and system.
+  </p>
+</section>
+
     <!-- TIMELINE -->
 <section id="timeline-section" class="fade-section">
   <h2 class="text-center mb-4">A Walk Through Time</h2>
@@ -50,9 +75,10 @@
         <div class="timeline-date">March 2020</div>
         <h5 class="timeline-title">Pandemic Began</h5>
         <p class="timeline-description">
-          Lost my first post-grad job as an Executive Assistant at a counseling office. 
-          This challenge became the spark that reignited my creative direction, blending art and introspection.
-        </p>
+  The sudden loss of my first post-grad role as an Executive Assistant became a quiet turning point.
+  Rather than fold, I returned to my creative roots — using this pause as a portal into self-expression, healing, and visual storytelling.
+</p>
+
       </div>
     </div>
 
@@ -61,11 +87,12 @@
       <div class="timeline-point"></div>
       <div class="timeline-content glass-card">
         <div class="timeline-date">October 2020</div>
-        <h5 class="timeline-title">Adobe Photoshop Certified</h5>
+        <h5 class="timeline-title">Photoshop Certified</h5>
         <p class="timeline-description">
-          Completed certification through NOVAC — deepening my foundation in visual design, 
-          storytelling, and digital composition.
-        </p>
+  Achieved Adobe Photoshop Certification through NOVAC, grounding my creative instincts in technical structure and digital craftsmanship.
+  This marked the beginning of my conscious transition into design as discipline.
+</p>
+
       </div>
     </div>
 
@@ -76,9 +103,10 @@
         <div class="timeline-date">2021 – 2022</div>
         <h5 class="timeline-title">The Film Chapter</h5>
         <p class="timeline-description">
-          Worked in the art and costume departments for film productions, 
-          learning to merge narrative, design, and emotion through set aesthetics and visual storytelling.
-        </p>
+  Immersed in the art and costume departments of film production, learning how narrative, emotion, and visual language shape immersive worlds.
+  This phase taught me how environments influence feeling — a lesson that deeply informs my UX approach today.
+</p>
+
       </div>
     </div>
 
@@ -89,9 +117,10 @@
         <div class="timeline-date">2023</div>
         <h5 class="timeline-title">Freelance Era</h5>
         <p class="timeline-description">
-          Launched freelance projects focused on branding, logos, and web layouts for small businesses — 
-          transforming creative intuition into professional practice.
-        </p>
+  Began translating intuition into professional vision through freelance projects — crafting logos, branding, and web concepts for emerging businesses.
+  Here, design evolved from passion into practice.
+</p>
+
       </div>
     </div>
 
@@ -102,9 +131,10 @@
         <div class="timeline-date">November 2024</div>
         <h5 class="timeline-title">Google UX/UI Design Certificate</h5>
         <p class="timeline-description">
-          Developed expertise in human-centered design, usability testing, and accessibility. 
-          Learned to create experiences that balance empathy, clarity, and function.
-        </p>
+  Earned Google UX/UI Design Certification, strengthening my foundation in empathy-driven design, usability testing, and accessibility.
+  This solidified my role as a designer who prioritizes human experience over aesthetics alone.
+</p>
+
       </div>
     </div>
 
@@ -115,10 +145,10 @@
         <div class="timeline-date">February 2025</div>
         <h5 class="timeline-title">Full Stack Developer — CodeX Academy</h5>
         <p class="timeline-description">
-          Gained technical fluency in HTML, CSS, JavaScript, and backend frameworks. 
-          Built <strong>Inkspresso</strong>, a full e-commerce site integrating front-end design 
-          and owner-side management dashboards.
-        </p>
+  Completed Full Stack Developer training through CodeX Academy, gaining fluency in front-end and backend workflows.
+  Developed my first big web based project, <strong>Inkspresso</strong>, a fully functional e-commerce platform bridging design and technical execution.
+</p>
+
       </div>
     </div>
 
@@ -129,10 +159,10 @@
         <div class="timeline-date">Present</div>
         <h5 class="timeline-title">Creating the Intersection</h5>
         <p class="timeline-description">
-          Now developing <strong>Inkspression</strong> — an interactive journaling and 
-          mindfulness web platform — while expanding my design portfolio. 
-          Focused on crafting soulful digital experiences that connect creativity, emotion, and technology.
-        </p>
+  Currently cultivating <strong>Inkspression</strong> — an interactive digital journaling platform centered on mindfulness and neuro-aesthetic flow.
+  My focus now lies in creating soulful, sensory digital experiences that honor both form and feeling.
+</p>
+
       </div>
     </div>
 
@@ -141,118 +171,63 @@
 
 <!-- SKILLS SECTION -->
 <aside id="skills-section" class="fade-section">
-  <h3 class="text-center mb-3">My Strengths & Capabilities</h3>
-  <table class="table table-hover skills-table">
-    <thead>
-      <tr>
-        <th>Skill</th>
-        <th>Proficiency</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Figma</td>
-        <td>
-          Advanced
-          <div class="skill-bar"><div class="skill-fill" style="--skill-level: 92%;"></div></div>
-        </td>
-      </tr>
-      <tr>
-        <td>UX/UI Design</td>
-        <td>
-          Advanced
-          <div class="skill-bar"><div class="skill-fill" style="--skill-level: 90%;"></div></div>
-        </td>
-      </tr>
-      <tr>
-        <td>HTML</td>
-        <td>
-          Advanced
-          <div class="skill-bar"><div class="skill-fill" style="--skill-level: 88%;"></div></div>
-        </td>
-      </tr>
-      <tr>
-        <td>CSS</td>
-        <td>
-          Advanced
-          <div class="skill-bar"><div class="skill-fill" style="--skill-level: 88%;"></div></div>
-        </td>
-      </tr>
-      <tr>
-        <td>JavaScript</td>
-        <td>
-          Upper Intermediate
-          <div class="skill-bar"><div class="skill-fill" style="--skill-level: 75%;"></div></div>
-        </td>
-      </tr>
-      <tr>
-        <td>React / Vite / Tailwind</td>
-        <td>
-          Intermediate
-          <div class="skill-bar"><div class="skill-fill" style="--skill-level: 70%;"></div></div>
-        </td>
-      </tr>
-      <tr>
-        <td>Adobe Photoshop</td>
-        <td>
-          Advanced
-          <div class="skill-bar"><div class="skill-fill" style="--skill-level: 90%;"></div></div>
-        </td>
-      </tr>
-      <tr>
-        <td>Adobe Illustrator</td>
-        <td>
-          Intermediate
-          <div class="skill-bar"><div class="skill-fill" style="--skill-level: 68%;"></div></div>
-        </td>
-      </tr>
-      <tr>
-        <td>User Research & Strategy</td>
-        <td>
-          Advanced
-          <div class="skill-bar"><div class="skill-fill" style="--skill-level: 87%;"></div></div>
-        </td>
-      </tr>
-      <tr>
-        <td>Brand Identity Design</td>
-        <td>
-          Advanced
-          <div class="skill-bar"><div class="skill-fill" style="--skill-level: 90%;"></div></div>
-        </td>
-      </tr>
-      <tr>
-        <td>Prototyping & Microinteractions</td>
-        <td>
-          Intermediate
-          <div class="skill-bar"><div class="skill-fill" style="--skill-level: 72%;"></div></div>
-        </td>
-      </tr>
-      <tr>
-        <td>Communication</td>
-        <td>
-          Advanced
-          <div class="skill-bar"><div class="skill-fill" style="--skill-level: 95%;"></div></div>
-        </td>
-      </tr>
-      <tr>
-        <td>Problem Solving</td>
-        <td>
-          Advanced
-          <div class="skill-bar"><div class="skill-fill" style="--skill-level: 90%;"></div></div>
-        </td>
-      </tr>
-      <tr>
-        <td>Empathy & Collaboration</td>
-        <td>
-          Expert
-          <div class="skill-bar"><div class="skill-fill" style="--skill-level: 100%;"></div></div>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+  <h3 class="text-center mb-3">Design Capabilities & Core Strengths</h3>
+
+  <p class="text-muted text-center small mb-4">
+    A fusion of technical skill, emotional intelligence, and creative fluency.
+  </p>
+
+  <div class="skills-grid">
+
+    <div class="skill-group">
+      <h5>Design & Experience</h5>
+      <ul>
+        <li>UX/UI Design Strategy</li>
+        <li>Human-Centered Design</li>
+        <li>Neurodivergent-Friendly Interfaces</li>
+        <li>Microinteractions & Sensory Flow</li>
+        <li>Brand Identity Systems</li>
+      </ul>
+    </div>
+
+    <div class="skill-group">
+      <h5>Tools & Platforms</h5>
+      <ul>
+        <li>Figma (Advanced)</li>
+        <li>Adobe Photoshop (Advanced)</li>
+        <li>Adobe Illustrator (Intermediate)</li>
+        <li>Notion & Digital Systems Design</li>
+      </ul>
+    </div>
+
+    <div class="skill-group">
+      <h5>Development & Technical</h5>
+      <ul>
+        <li>HTML + CSS (Advanced)</li>
+        <li>JavaScript (Intermediate)</li>
+        <li>React / Tailwind / Vite</li>
+        <li>Web Accessibility Best Practices</li>
+      </ul>
+    </div>
+
+    <div class="skill-group">
+      <h5>Human Intelligence</h5>
+      <ul>
+        <li>Empathy-Driven Design Thinking</li>
+        <li>User Research & Psychology-Based Strategy</li>
+        <li>Collaborative Communication</li>
+        <li>Creative Problem Solving</li>
+      </ul>
+    </div>
+
+  </div>
+
+  <div class="text-center mt-4">
+    <a href="content.html" class="secondary-cta">
+      View Selected Works & Case Studies
+    </a>
+  </div>
 </aside>
-
-
     </main>
 
     <!-- FOOTER -->
