update styling and some of the wording

--- a/about.html
+++ b/about.html
@@ -19,7 +19,6 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Caveat&family=Inter:wght@300;400;600&display=swap"
     />
-    <link rel="stylesheet" href="css/colors.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/timeline.css" />
     <link rel="stylesheet" href="css/skills.css" />
@@ -171,53 +170,97 @@
 
 <!-- SKILLS SECTION -->
 <aside id="skills-section" class="fade-section">
-  <h3 class="text-center mb-3">Design Capabilities & Core Strengths</h3>
+  <h3 class="text-center mb-2">Design Capabilities & Core Strengths</h3>
 
-  <p class="text-muted text-center small mb-4">
-    A fusion of technical skill, emotional intelligence, and creative fluency.
+  <p class="skills-intro">
+    A fusion of technical precision, emotional intelligence, and creative fluency.
   </p>
 
   <div class="skills-grid">
 
+    <!-- DESIGN & EXPERIENCE -->
     <div class="skill-group">
-      <h5>Design & Experience</h5>
-      <ul>
-        <li>UX/UI Design Strategy</li>
-        <li>Human-Centered Design</li>
-        <li>Neurodivergent-Friendly Interfaces</li>
-        <li>Microinteractions & Sensory Flow</li>
-        <li>Brand Identity Systems</li>
-      </ul>
+      <h5 class="skill-category">Design & Experience</h5>
+
+      <div class="skill-item">
+        <span>UX/UI Design Strategy</span>
+        <div class="skill-bar"><div class="skill-fill" style="--skill-level: 92%;"></div></div>
+      </div>
+
+      <div class="skill-item">
+        <span>Human-Centered Design</span>
+        <div class="skill-bar"><div class="skill-fill" style="--skill-level: 90%;"></div></div>
+      </div>
+
+      <div class="skill-item">
+        <span>Neurodivergent-Friendly Interfaces</span>
+        <div class="skill-bar"><div class="skill-fill" style="--skill-level: 88%;"></div></div>
+      </div>
+
+      <div class="skill-item">
+        <span>Brand Identity Systems</span>
+        <div class="skill-bar"><div class="skill-fill" style="--skill-level: 85%;"></div></div>
+      </div>
     </div>
 
+    <!-- TOOLS & PLATFORMS -->
     <div class="skill-group">
-      <h5>Tools & Platforms</h5>
-      <ul>
-        <li>Figma (Advanced)</li>
-        <li>Adobe Photoshop (Advanced)</li>
-        <li>Adobe Illustrator (Intermediate)</li>
-        <li>Notion & Digital Systems Design</li>
-      </ul>
+      <h5 class="skill-category">Tools & Platforms</h5>
+
+      <div class="skill-item">
+        <span>Figma</span>
+        <div class="skill-bar"><div class="skill-fill" style="--skill-level: 92%;"></div></div>
+      </div>
+
+      <div class="skill-item">
+        <span>Adobe Photoshop</span>
+        <div class="skill-bar"><div class="skill-fill" style="--skill-level: 90%;"></div></div>
+      </div>
+
+      <div class="skill-item">
+        <span>Adobe Illustrator</span>
+        <div class="skill-bar"><div class="skill-fill" style="--skill-level: 70%;"></div></div>
+      </div>
     </div>
 
+    <!-- DEVELOPMENT & TECH -->
     <div class="skill-group">
-      <h5>Development & Technical</h5>
-      <ul>
-        <li>HTML + CSS (Advanced)</li>
-        <li>JavaScript (Intermediate)</li>
-        <li>React / Tailwind / Vite</li>
-        <li>Web Accessibility Best Practices</li>
-      </ul>
+      <h5 class="skill-category">Development & Technical</h5>
+
+      <div class="skill-item">
+        <span>HTML + CSS</span>
+        <div class="skill-bar"><div class="skill-fill" style="--skill-level: 88%;"></div></div>
+      </div>
+
+      <div class="skill-item">
+        <span>JavaScript</span>
+        <div class="skill-bar"><div class="skill-fill" style="--skill-level: 75%;"></div></div>
+      </div>
+
+      <div class="skill-item">
+        <span>React / Tailwind / Vite</span>
+        <div class="skill-bar"><div class="skill-fill" style="--skill-level: 70%;"></div></div>
+      </div>
     </div>
 
+    <!-- HUMAN INTELLIGENCE -->
     <div class="skill-group">
-      <h5>Human Intelligence</h5>
-      <ul>
-        <li>Empathy-Driven Design Thinking</li>
-        <li>User Research & Psychology-Based Strategy</li>
-        <li>Collaborative Communication</li>
-        <li>Creative Problem Solving</li>
-      </ul>
+      <h5 class="skill-category">Human Intelligence</h5>
+
+      <div class="skill-item">
+        <span>Empathy-Driven Thinking</span>
+        <div class="skill-bar"><div class="skill-fill" style="--skill-level: 98%;"></div></div>
+      </div>
+
+      <div class="skill-item">
+        <span>User Research & Psychology Strategy</span>
+        <div class="skill-bar"><div class="skill-fill" style="--skill-level: 90%;"></div></div>
+      </div>
+
+      <div class="skill-item">
+        <span>Creative Problem Solving</span>
+        <div class="skill-bar"><div class="skill-fill" style="--skill-level: 92%;"></div></div>
+      </div>
     </div>
 
   </div>
@@ -228,6 +271,8 @@
     </a>
   </div>
 </aside>
+
+
     </main>
 
     <!-- FOOTER -->
