refine homepage and add ux case study structure

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Ace Chianni | Multidisciplinary Designer</title>
+  <title>Ace Chianni | UX/UI Designer for Wellness & Human-Centered Products</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO -->
@@ -37,9 +38,10 @@
       Technology as the Method.
     </h1>
 
-    <p class="hero-intro">
-      I’m Ace — a multidisciplinary designer transforming emotion, psychology, and creativity into intentional digital experiences that feel human, immersive, and alive.
-    </p>
+    <p class="hero-intro hero-sub">
+  I'm Ace, a UX/UI Designer specializing in wellness, lifestyle, and emotionally intelligent digital products.
+</p>
+
 
     <a href="content.html" class="hero-cta">
       Explore My Work
@@ -47,6 +49,14 @@
 
   </div>
 </section>
+
+<section class="home-focus text-center">
+  <p class="focus-line">Wellness & mental health platforms</p>
+  <p class="focus-line">Human-centered web applications</p>
+  <p class="focus-line">Accessible, emotionally aware interfaces</p>
+</section>
+
+
 
 <!-- VISUAL STORY CAROUSEL -->
 <section class="carousel-section">
@@ -123,6 +133,10 @@
   <p class="strategy-text" style="margin-top: 1rem;">
     I don’t just design layouts — I create environments where users feel seen, regulated, and inspired.
   </p>
+  <p class="small text-muted text-center">
+  Open to remote UX/UI and product design roles in wellness, lifestyle, and mission-driven spaces.
+</p>
+
 
   <a href="about.html" class="secondary-cta">
     Learn My Story
